Minor spacing fixes

--- a/sass/helpers/_typography.sass
+++ b/sass/helpers/_typography.sass
@@ -2,10 +2,10 @@
  * Settings
  */
 
-$header-margins: 1.5rem 0 1rem
+$header-margins: 1rem 0
 
 // Headers
-h1,h2,h3,h4,h5,h5,h6
+h1,h2,h3,h4,h5,h5,h6,span
   margin: $header-margins
 
 // Alignment Modifiers
